done- web dev, inspire baki

--- a/index.html
+++ b/index.html
@@ -4,48 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-1</title>
-    <link rel="stylesheet" href="assignment-1.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="fot">
     <nav>
         <div class="nav-bar">
-            <h3>
+            <h3 class="nav-bn">
                 Awlad.H
             </h3>
-            <button>
+            <button class="down">
                 Download Resume
             </button>
         </div>
-        <img src="assets/Group.png" alt="404 Error">
-        <h1>
-            "In the near future, I hope to become a Developer."
-        </h1>
-        <p>
-            Need a Spectacular Website for your Business???
-        </p>
-        <button>
-            Contact with Me
-        </button>
+        <div class="nav-under">
+            <img src="assets/Group.png" alt="404 Error">
+        <div class="nav-box">
+            <h1 class="nav-title
+            ">
+                "In the near future, I hope to become a Developer."
+            </h1>
+            <p class="nav-des">
+                Need a Spectacular Website for your Business???
+            </p>
+            <button class="me">
+                Contact with Me
+            </button>
+        </div>
+        </div>
     </nav>
     <main>
         <section class="web-dev">
-            <div>
-                <h2>
+            <div class="web-dev-1">
+                 <h2 class="web-dev-1-title">
                     Why Web Development???
                 </h2>
-                <p>
+                <p class="web-dev-1-des">
                     To navigate anything in the internet, We need website. 
                 </p>    
             </div>
+            <div class="coding">
             <div class="coding1">
-                <div class="img1"><img src="assets/Layer_1.png" alt="404 Error"></div>
                 <div class="des">
                     <h3 class="des-head">I will do coding and change The World</h3>
                     <p class="des-des">Coding is much more easier then it looks</p>
                     <button class="l-more">Learn more</button>
                 </div>
+                <div class="img1"><img src="assets/Layer_1.png" alt="404 Error"></div>
             </div>
-            <div class="coding2">
+            <div class="coding1">
                 <div class="img2"><img src="assets/Group 3.png" alt="404 Error"></div>
                 <div class="des">
                     <h3 class="des-head">I will Help People by creating Modern Web system</h3>
@@ -53,14 +59,16 @@
                     <button class="l-more">Learn more</button>
                 </div>
             </div>
-            <div class="coding3">
-                <div class="img3"><img src="assets/Group 4.png" alt="404 Error"></div>
+            <div class="coding1">
                 <div class="des">
                     <h3 class="des-head">I will create better websites for more People</h3>
                     <p class="des-des">Creating website is my passion</p>
                     <button class="l-more">Learn more</button>
+                 </div>
+                    <div class="img3"><img src="assets/Group 4.png" alt="404 Error"></div>
                 </div>
             </div>
+        </div>
         </section>
         <section class="insp">
             <div class="inspiration">
@@ -145,14 +153,12 @@
                 <p>
                     As a new developer, I need suggestion to develop myself.
                 </p>
-                <form action="#">
                     <div>
                         <p>
                             <input type="text" placeholder="Suggest me any feedback for me">
                         </p>
                         <input type="submit" value="Submit">
-                    </div>
-                </form> 
+                    </div> 
             </div>   
         </section>
     </main>
