--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         </section>
         <section class="insp">
             <div class="inspiration">
-                <h2>
+                <h2 class="inspiration-title">
                     My inspiration
                 </h2>
-                <p>
+                <p class="inspiration-des">
                     Being passionate of tech, is my inspiration 
                 </p>
             </div>
-            <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MxEtxo_AaZ4?si=0Lrdc9oidPWARTNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="vid">
+                <iframe class="yt-vid" width="560" height="315" src="https://www.youtube.com/embed/MxEtxo_AaZ4?si=0Lrdc9oidPWARTNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <section class="target">
@@ -94,19 +94,19 @@
                     </p>
                 </div>
                 <div class="tar-lang">
-                    <div class="lang1">
+                    <div class="lang">
                         <img src="assets/html.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">HTML</h3>
                         <p class="lang-des">HTML means Hyper text Markup Language</p>
                         <a href="" class="linking">Learn more</a>
                     </div>
-                    <div class="lang2">
+                    <div class="lang">
                         <img src="assets/css.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">CSS</h3>
                         <p class="lang-des">CSS means Cascading Style Sheet</p>
                         <a href="" class="linking">Learn more</a>
                     </div>
-                    <div class="lang3">
+                    <div class="lang">
                         <img src="assets/js.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">Java Script</h3>
                         <p class="lang-des">JS means Java Script</p>
