--- a/index.html
+++ b/index.html
@@ -146,18 +146,18 @@
             </div>
         </section>
         <section class="support">
-            <div>
+            <div class="support-box">
                 <h3>
                     I Need Support
                 </h3>
                 <p>
                     As a new developer, I need suggestion to develop myself.
                 </p>
-                    <div>
+                    <div class="suggestion">
                         <p>
-                            <input type="text" placeholder="Suggest me any feedback for me">
+                            <input class="feed"  type="text" placeholder="Suggest me any feedback for me">
                         </p>
-                        <input type="submit" value="Submit">
+                        <input class="mit"  type="submit" value="Submit">
                     </div> 
             </div>   
         </section>
