--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body class="fot">
     <nav>
         <div class="nav-bar">
-            <h3 class="nav-bn">
-                Awlad.H
-            </h3>
+            <a href="#">
+                <h3 class="nav-bn">
+                    Awlad.H
+                </h3>
+            </a>
             <button class="down">
                 Download Resume
             </button>
@@ -26,9 +28,11 @@
             <p class="nav-des">
                 Need a Spectacular Website for your Business???
             </p>
-            <button class="me">
-                Contact with Me
-            </button>
+            <div class="btn-con">
+                <a href="#connect"><button class="me">
+                    Contact with Me
+                </button></a>
+            </div>
         </div>
         </div>
     </nav>
@@ -94,19 +98,19 @@
                     </p>
                 </div>
                 <div class="tar-lang">
-                    <div class="lang">
+                    <div class="lang1">
                         <img src="assets/html.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">HTML</h3>
                         <p class="lang-des">HTML means Hyper text Markup Language</p>
                         <a href="" class="linking">Learn more</a>
                     </div>
-                    <div class="lang">
+                    <div class="lang2">
                         <img src="assets/css.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">CSS</h3>
                         <p class="lang-des">CSS means Cascading Style Sheet</p>
                         <a href="" class="linking">Learn more</a>
                     </div>
-                    <div class="lang">
+                    <div class="lang3">
                         <img src="assets/js.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">Java Script</h3>
                         <p class="lang-des">JS means Java Script</p>
@@ -145,34 +149,37 @@
                 </div>
             </div>
         </section>
-        <section class="support">
-            <div class="support-box">
-                <h3>
-                    I Need Support
-                </h3>
-                <p>
-                    As a new developer, I need suggestion to develop myself.
-                </p>
+        <section class="support-sec">
+            <div class="support-contain">
+                <div class="contain-wr">
+                    <h3 class="need">
+                        I Need Support
+                    </h3>
+                    <p class="des-foot">
+                        As a new developer, I need suggestion to develop myself.
+                    </p>
+                </div>
                     <div class="suggestion">
-                        <p>
                             <input class="feed"  type="text" placeholder="Suggest me any feedback for me">
-                        </p>
                         <input class="mit"  type="submit" value="Submit">
                     </div> 
             </div>   
         </section>
     </main>
-    <footer>
+    <footer id="connect">
        <div class="foot">
-        <div class="foot-des">An Open Commitment by Awlad Hossain</div>
-        <div class="foot-icon">
+        <div class="foot-des">An Open Commitment by Awlad Hossain
+        </div>
+        <div class="icons">
+            <div class="foot-icon1">
             <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="404 Error"></a>
         </div>
-        <div class="foot-icon">
+        <div class="foot-icon2">
             <a href="https://github.com/" target="_blank"><img src="assets/github.png" alt="404 Error"></a>
         </div>
-        <div class="foot-icon">
+        <div class="foot-icon3">
             <a href="https://www.linkedin.com/feed/" target="_blank"><img src="assets/linkedin-icon 1.png" alt="404 Error"></a>
+        </div>
         </div>
        </div>
     </footer>
