--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="nav-bar">
             <a href="#">
                 <h3 class="nav-bn">
-                    Awlad.H
+                    Abu Bokor Siddique
                 </h3>
             </a>
             <button class="down">
@@ -25,8 +25,8 @@
             ">
                 "In the near future, I hope to become a Developer."
             </h1>
-            <p class="nav-des">
-                Need a Spectacular Website for your Business???
+            <p class="des">
+                Need a Spectacular Website for your Business?
             </p>
             <div class="btn-con">
                 <a href="#connect"><button class="me">
@@ -42,7 +42,7 @@
                  <h2 class="web-dev-1-title">
                     Why Web Development???
                 </h2>
-                <p class="web-dev-1-des">
+                <p class="des">
                     To navigate anything in the internet, We need website. 
                 </p>    
             </div>
@@ -50,7 +50,7 @@
             <div class="coding1">
                 <div class="des">
                     <h3 class="des-head">I will do coding and change The World</h3>
-                    <p class="des-des">Coding is much more easier then it looks</p>
+                    <p class="des">Coding is much more easier then it looks</p>
                     <button class="l-more">Learn more</button>
                 </div>
                 <div class="img1"><img src="assets/Layer_1.png" alt="404 Error"></div>
@@ -59,7 +59,7 @@
                 <div class="img2"><img src="assets/Group 3.png" alt="404 Error"></div>
                 <div class="des">
                     <h3 class="des-head">I will Help People by creating Modern Web system</h3>
-                    <p class="des-des">Now-a-days websites are not as complex as before</p>
+                    <p class="des">Now-a-days websites are not as complex as before</p>
                     <button class="l-more">Learn more</button>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 </p>
             </div>
             <div class="vid">
-                <iframe class="yt-vid" width="560" height="315" src="https://www.youtube.com/embed/MxEtxo_AaZ4?si=0Lrdc9oidPWARTNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="yt-vid" width="1076" height="550" src="https://www.youtube.com/embed/MxEtxo_AaZ4?si=0Lrdc9oidPWARTNQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <section class="target">
@@ -123,28 +123,30 @@
                     <h3 class="next-title">My Next target</h3>
                     <p class="next-des">My next targets are ReactJS, NodeJS and Mongodb</p>
                 </div>
-                <div class="next-lang">
-                    <div class="fut-img"><img src="assets/react.png" alt="404 Error"></div>
-                    <div class="fut-des">
-                        <h3 class="fut-des-title">ReactJS</h3>
-                        <p class="fut-des-descript">ReactJs is a type of Java Script</p>
-                        <a href="" class="linking">Learn More</a>
+                <div class="lang-gap">
+                    <div class="next-lang">
+                        <div class="fut-img"><img src="assets/react.png" alt="404 Error"></div>
+                        <div class="fut-des">
+                            <h3 class="fut-des-title">ReactJS</h3>
+                            <p class="fut-des-descript">ReactJs is a type of Java Script</p>
+                            <a href="" class="linking">Learn More</a>
+                        </div>
                     </div>
-                </div>
-                <div class="next-lang">
-                    <div class="fut-img"><img src="assets/nodejs.png" alt="404 Error"></div>
-                    <div class="fut-des">
-                        <h3 class="fut-des-title">NodeJS</h3>
-                        <p class="fut-des-descript">NodeJS is a type of Java Script</p>
-                        <a href="" class="linking">Leran more</a>
+                    <div class="next-lang">
+                        <div class="fut-img"><img src="assets/nodejs.png" alt="404 Error"></div>
+                        <div class="fut-des">
+                            <h3 class="fut-des-title">NodeJS</h3>
+                            <p class="fut-des-descript">NodeJS is a type of Java Script</p>
+                            <a href="" class="linking">Learn more</a>
+                        </div>
                     </div>
-                </div>
-                <div class="next-lang">
-                    <div class="fut-img"><img src="assets/mongodb.png" alt="404 Error"></div>
-                    <div class="fut-des">
-                        <h3 class="fut-des-title">Mongodb</h3>
-                        <p class="fut-des-descript">Mongodb is a type of Java Script</p>
-                        <a href="" class="linking">Learn More</a>
+                    <div class="next-lang">
+                        <div class="fut-img"><img src="assets/mongodb.png" alt="404 Error"></div>
+                        <div class="fut-des">
+                            <h3 class="fut-des-title">Mongodb</h3>
+                            <p class="fut-des-descript">Mongodb is a type of Java Script</p>
+                            <a href="" class="linking">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -168,7 +170,7 @@
     </main>
     <footer id="connect">
        <div class="foot">
-        <div class="foot-des">An Open Commitment by Awlad Hossain
+        <div class="foot-des">An Open Commitment by Abu Bokor Siddique
         </div>
         <div class="icons">
             <div class="foot-icon1">
