--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
                         <img src="assets/html.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">HTML</h3>
                         <p class="lang-des">HTML means Hyper text Markup Language</p>
-                        <a href="" class="linking">Learn more</a>
+                        <a href="#" class="linking">Learn more</a>
                     </div>
                     <div class="lang2">
                         <img src="assets/css.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">CSS</h3>
                         <p class="lang-des">CSS means Cascading Style Sheet</p>
-                        <a href="" class="linking">Learn more</a>
+                        <a href="#" class="linking">Learn more</a>
                     </div>
                     <div class="lang3">
                         <img src="assets/js.png" alt="404 Error" class="lang-img">
                         <h3 class="lang-name">Java Script</h3>
                         <p class="lang-des">JS means Java Script</p>
-                        <a href="" class="linking">Learn more</a>
+                        <a href="#" class="linking">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <div class="fut-des">
                             <h3 class="fut-des-title">ReactJS</h3>
                             <p class="fut-des-descript">ReactJs is a type of Java Script</p>
-                            <a href="" class="linking">Learn More</a>
+                            <a href="#" class="linking">Learn More</a>
                         </div>
                     </div>
                     <div class="next-lang">
@@ -137,7 +137,7 @@
                         <div class="fut-des">
                             <h3 class="fut-des-title">NodeJS</h3>
                             <p class="fut-des-descript">NodeJS is a type of Java Script</p>
-                            <a href="" class="linking">Learn more</a>
+                            <a href="#" class="linking">Learn more</a>
                         </div>
                     </div>
                     <div class="next-lang">
@@ -145,7 +145,7 @@
                         <div class="fut-des">
                             <h3 class="fut-des-title">Mongodb</h3>
                             <p class="fut-des-descript">Mongodb is a type of Java Script</p>
-                            <a href="" class="linking">Learn More</a>
+                            <a href="#" class="linking">Learn More</a>
                         </div>
                     </div>
                 </div>
